--- a/Vue_js/backend/demo/pom.xml
+++ b/Vue_js/backend/demo/pom.xml
@@ -54,6 +54,13 @@
 			</exclusions>
 		</dependency>
 
+		<!-- JWT -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+
 		<!-- lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
