--- a/Vue_js/backend/demo/pom.xml
+++ b/Vue_js/backend/demo/pom.xml
@@ -60,6 +60,19 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
+		<!-- Auth0 Spring Security API -->
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>auth0-spring-security-api</artifactId>
+			<version>1.2.6</version>
+		</dependency>
+		<!-- Java JWT -->
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.8.3</version>
+		</dependency>
+
 
 		<!-- lombok -->
 		<dependency>
