--- a/Vue_js/backend/demo/pom.xml
+++ b/Vue_js/backend/demo/pom.xml
@@ -54,6 +54,19 @@
 			</exclusions>
 		</dependency>
 
+		<!--Multipart File Up&Download -->
+		<dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
+
 		<!-- JWT -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
