--- a/Vue_js/backend/demo/src/main/resources/application.properties
+++ b/Vue_js/backend/demo/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.main.allow-bean-definition-overriding: true
 spring.jpa.show-sql=true 
 spring.jpa.properties.hibernate.format_sql=true
 
+# multiFile size
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
