--- a/Vue_js/backend/demo/frontend/package.json
+++ b/Vue_js/backend/demo/frontend/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "material-design-icons-iconfont": "^5.0.1",
     "vee-validate": "^3.2.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.1.6",
     "vuelidate": "^0.7.5",
-    "vuetify": "^2.2.11",
+    "vuetify": "^2.3.1",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
